<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_prometheus</name>
  <version>0.0.1</version>
  <description>Expose ROS topics to Prometheus</description>
  <maintainer email="gioelevu@proton.me">Gioele Vuaran</maintainer>
  <license>Apache-2.0</license>

  <depend>rcl_interfaces</depend>
  <depend>ros2topic</depend>
  <depend>rosidl_parser</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
